# Velocity

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
.claude/: settings.local.json
.claude/commands/: code-review.md  cto.md  investigate.md  qa.md  security-review.md
e2e/: agent-mode.spec.ts  block-actions.spec.ts  exit-codes.spec.ts  find-in-output.spec.ts  fixtures.ts  font-settings.spec.ts  input-editor.spec.ts  intent-classifier.spec.ts  llm-intent-fallback.spec.ts  process-lifecycle.spec.ts  settings.spec.ts  shell-switching.spec.ts  split-panes.spec.ts  tab-completions.spec.ts  tabs.spec.ts  terminal-basic.spec.ts
prompts/: FLOW.md  STATE.md  TESTING.md  code-reviewer.md  cto.md  dev-agent.md  qa-agent.md  security-reviewer.md
prompts/tasks/: FIX-001-code-review-r1.md  FIX-002-code-review-r1.md  FIX-003-code-review-r1.md  FIX-004-code-review-r1.md  FIX-005-code-review-r1.md  FIX-007-pty-output-race.md  FIX-008-pty-output-pipeline.md  FIX-009-conpty-cursor-response.md  FIX-010-e2e-wsl-test.md  FIX-011-missed-findings.md  TASK-001-bootstrap.md  (+57 more)
scripts/: build.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: danger.rs  lib.rs  main.rs
src-tauri/src/ansi/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/pty/: mod.rs
src-tauri/src/session/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/tests/: pty_integration.rs
(+237 files in other folders)
